* c-parse.in (stmts_and_decls): Make label at end of compound 	statement a hard error.
testsuite:
	* gcc.dg/label-compound-stmt-1.c: New test.
	* gcc.c-torture/compile/950922-1.c,
	gcc.c-torture/compile/20000211-3.c,
	gcc.c-torture/compile/20000518-1.c,
	gcc.c-torture/compile/20021108-1.c: Avoid labels at and of
	compound statements.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -1,6 +1,6 @@
 /* YACC parser for C syntax and for Objective C.  -*-c-*-
-   Copyright (C) 1987, 1988, 1989, 1992, 1993, 1994, 1995, 1996,
-   1997, 1998, 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+   Copyright (C) 1987, 1988, 1989, 1992, 1993, 1994, 1995, 1996, 1997,
+   1998, 1999, 2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -2001,7 +2001,7 @@ stmts_and_decls:
 	| lineno_stmt_decl_or_labels_ending_decl
 	| lineno_stmt_decl_or_labels_ending_label
 		{
-		  pedwarn ("deprecated use of label at end of compound statement");
+		  error ("label at end of compound statement");
 		}
 	| lineno_stmt_decl_or_labels_ending_error
 	;
