boehm-gc/ 2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>
	* configure.in: Add in AC_PREREQ(2.13)

libf2c/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* libF77/configure.in: Update to AC_PREREQ(2.13)
	* libI77/configure.in: Update to AC_PREREQ(2.13)
	* libU77/configure.in: Update to AC_PREREQ(2.13)
	* libU77/configure: Regenerate.

libffi/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)

libjava/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)

libjava/libltdl
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Update to AC_PREREQ(2.57).  Delete FIXME comment.

zlib/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75901 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -1,4 +1,5 @@
 dnl Process this with autoconf to create configure
+AC_PREREQ(2.13)
 AC_INIT(java/lang/System.java)
 
 # This works around the fact that libtool configuration may change LD
