--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -76,16 +76,16 @@ $(GCJ)-cross$(exeext): $(GCJ)$(exeext)
 	-rm -f $(GCJ)-cross$(exeext)
 	cp $(GCJ)$(exeext) $(GCJ)-cross$(exeext)
 
-po-generated: $(parsedir)/java/parse.c $(parsedir)/java/parse-scan.c
+po-generated: java/parse.c java/parse-scan.c
 
-$(parsedir)/java/parse.c: $(srcdir)/java/parse.y
-	$(BISON) -t --name-prefix=java_ $(BISONFLAGS) \
-	    -o p$$$$.c $(srcdir)/java/parse.y && \
-	mv -f p$$$$.c $(parsedir)/java/parse.c
+java.srcextra: java/parse.c java/parse-scan.c
+	-cp -p $^ $(srcdir)/java
 
-$(parsedir)/java/parse-scan.c:  $(srcdir)/java/parse-scan.y
-	$(BISON) -t $(BISONFLAGS) -o ps$$$$.c $(srcdir)/java/parse-scan.y && \
-	mv -f ps$$$$.c $(parsedir)/java/parse-scan.c
+java/parse.c: java/parse.y
+	-$(BISON) -t --name-prefix=java_ $(BISONFLAGS) -o $@ $<
+
+java/parse-scan.c: java/parse-scan.y
+	-$(BISON) -t $(BISONFLAGS) -o $@ $< 
 
 $(srcdir)/java/keyword.h: $(srcdir)/java/keyword.gperf
 	(cd $(srcdir)/java || exit 1; \
@@ -228,15 +228,15 @@ install-info:: $(DESTDIR)$(infodir)/gcj.info
 # We just have to delete files specific to us.
 
 java.mostlyclean:
+	-rm -f java/parse.c java/parse-scan.c
 	-rm -f java/*$(objext) $(DEMANGLER_PROG)
 	-rm -f java/*$(coverageexts)
 	-rm -f jc1$(exeext) $(GCJ)$(exeext) jvgenmain$(exeext) gcjh$(exeext) jv-scan$(exeext) jcf-dump$(exeext) s-java
 java.clean:
 java.distclean:
 	-rm -f java/config.status java/Makefile
-	-rm -f java/parse.output
+	-rm -f java/parse.output java/y.tab.c
 java.maintainer-clean:
-	-rm -f $(parsedir)/java/parse.c $(parsedir)/java/parse-scan.c java/parse.output java/y.tab.c
 	-rm -f $(docobjdir)/gcj.1 $(docobjdir)/gcjh.1
 	-rm -f $(docobjdir)/jv-scan.1 $(docobjdir)/jcf-dump.1
 	-rm -f $(docobjdir)/gij.1
@@ -325,18 +325,11 @@ java/xref.o: java/xref.c java/xref.h $(CONFIG_H) $(JAVA_TREE_H) toplev.h \
   $(SYSTEM_H) coretypes.h $(TM_H)
 java/zextract.o: java/zextract.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
   java/zipfile.h
-
-# parse-scan.o and parse.o compiled from $(parsedir)/java
-java/parse-scan.o: $(parsedir)/java/parse-scan.c $(CONFIG_H) $(SYSTEM_H) \
+java/parse-scan.o: java/parse-scan.c $(CONFIG_H) $(SYSTEM_H) \
   coretypes.h $(TM_H) toplev.h $(JAVA_LEX_C) java/parse.h java/lex.h input.h
-	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
-		$(parsedir)/java/parse-scan.c $(OUTPUT_OPTION)
-
-java/parse.o: $(parsedir)/java/parse.c java/jcf-reader.c $(CONFIG_H) $(SYSTEM_H) \
+java/parse.o: java/parse.c java/jcf-reader.c $(CONFIG_H) $(SYSTEM_H) \
   coretypes.h $(TM_H) function.h $(JAVA_TREE_H) $(JAVA_LEX_C) java/parse.h \
   java/lex.h input.h $(GGC_H) debug.h gt-java-parse.h gtype-java.h
-	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
-		$(parsedir)/java/parse.c $(OUTPUT_OPTION)
 
 # jcf-io.o needs $(ZLIBINC) added to cflags.
 java/jcf-io.o: java/jcf-io.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
