* Makefile.in: Rebuilt. 	* Makefile.am (gnu/gcj/runtime/StackTrace.lo): New rule. 	(%.lo: %.java) Filter out StackTrace.lo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75934 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -452,11 +452,20 @@ $(gtk_c_files): %.lo: %.c
 $(gtk_c_files): $(gtk_c_headers)
 
 ## FIXME: see above.
-$(javao_files) $(x_javao_files) $(lib_org_w3c_dom_la_OBJECTS) $(lib_org_xml_sax_la_OBJECTS): %.lo: %.java
+
+## Note: we omit StackTrace here, since it has an explicit rule a bit
+## later, and GNU make will warn in this case.
+$(filter-out gnu/gcj/runtime/StackTrace.lo, $(javao_files)) $(x_javao_files) $(lib_org_w3c_dom_la_OBJECTS) $(lib_org_xml_sax_la_OBJECTS): %.lo: %.java
 	$(GCJCOMPILE) -o $@ $<
 
 $(gtk_awt_peer_sources:.java=.lo): %.lo: %.java
 	$(GCJCOMPILE) -fjni -o $@ $<
+
+## A special case.  The sibcall optimization can change the number of
+## frames on the stack, and StackTrace makes assumptions about this
+## number.
+gnu/gcj/runtime/StackTrace.lo: gnu/gcj/runtime/StackTrace.java
+	$(GCJCOMPILE) -fno-optimize-sibling-calls -o $@ $<
 
 ## Pass the list of object files to libtool in a temporary file to 
 ## avoid tripping platform command line length limits.
