2004-01-15  Kelley Cook  <kcook@gcc.gnu.org>
	* Makefile.in (MAINT): Make it an immediate assignment.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75950 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -166,7 +166,7 @@ STRICT2_WARN = -pedantic -Wno-long-long -Wold-style-definition @WERROR@
 NOCOMMON_FLAG = @nocommon_flag@
 
 # This is set by --disable-maintainer-mode (default) to "#"
-MAINT = @MAINT@
+MAINT := @MAINT@
 
 # These are set by --enable-checking=valgrind.
 RUN_GEN = @valgrind_command@
