gcc/ 	* system.h (ASM_OUTPUT_SECTION_NAME): Poison. 	* config/alpha/unicosmk.h: Remove a commented-out definition 	of ASM_OUTPUT_SECTION_NAME. 	* config/stormy16/stormy16.h: Likewise.
	gcc/ada/
	* Make-lang.in (utils.o): Depend on target.h.
	* utils.c: Include target.h.
	(process_attributes): Use targetm.have_named_sections instead
	of ASM_OUTPUT_SECTION_NAME.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75995 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -1213,7 +1213,7 @@ ada/utils.o : ada/utils.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(TREE_H) flags.h expr.h convert.h defaults.h ada/ada.h ada/types.h \
    ada/atree.h ada/nlists.h ada/elists.h ada/sinfo.h ada/einfo.h ada/namet.h \
    ada/stringt.h ada/uintp.h ada/fe.h $(ADA_TREE_H) ada/gigi.h gt-ada-utils.h \
-   gtype-ada.h
+   gtype-ada.h target.h
 
 ada/utils2.o : ada/utils2.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(TREE_H) flags.h ada/ada.h ada/types.h ada/atree.h ada/nlists.h \
