* java/lang/natClassLoader.cc: Moved VMClassLoader methods... 	* java/lang/natVMClassLoader.cc: ...here.  New file. 	* Makefile.in: Rebuilt. 	* Makefile.am (nat_source_files): Added natVMClassLoader.cc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76003 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -2805,6 +2805,7 @@ java/lang/natString.cc \
 java/lang/natStringBuffer.cc \
 java/lang/natSystem.cc \
 java/lang/natThread.cc \
+java/lang/natVMClassLoader.cc \
 java/lang/natVMSecurityManager.cc \
 java/lang/ref/natReference.cc \
 java/lang/reflect/natArray.cc \
