2004-01-19  Dale Johannesen  <dalej@apple.com>
       * params.def:  Add PARAM_MAX_CALLS_GLOBAL_VAR and
       PARAM_MAX_CLOBBERED_VARS_GLOBAL_VAR.
       params.h:  Ditto.
       tree-dfa.c:  Use them.
       doc/invoke.texi:  Document them.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76190 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1579,7 +1579,7 @@ tree-dfa.o : tree-dfa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    errors.h tree-inline.h $(HASHTAB_H) flags.h function.h $(TIMEVAR_H) \
    tree-alias-common.h convert.h $(TM_H) coretypes.h langhooks.h \
-   $(TREE_DUMP_H) tree-pass.h
+   $(TREE_DUMP_H) tree-pass.h params.h
 tree-ssa-operands.o : tree-ssa-operands.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(TREE_H) $(TM_P_H) $(GGC_H) diagnostic.h \
    tree-inline.h flags.h function.h $(TM_H) 
