Move options processing from server command line to client command 	line, default server starting to on.
	* c-pch.c (c_common_read_pch): Allow options to initialized more
	than once.
	(c_common_no_more_pch): Don't unmap more than once, as other
	compilation units can reuse the PCH state as is.

	* c-opts.c (max_deferred): Add.
	(defer_opt): Add bounds check.
	(c_common_init_options): Allow options to initialized more than
	once.
	(c_common_post_options): Likewise.
	(reinit_copts): Likewise.
	(init_c_common_once): Likewise.
	(c_common_parse_file): Likewise.
	(c_common_parse_file): Moved pch-init to here.
	(finish_options): Allow options to initialized more than once.

	* c-objc-common.c (init_c_objc_common_once): Allow options to
	initialized more than once.

	* c-incpath.h (reinit_incpath): Add.

	* c-incpath.c (reinit_incpath): Add.

	* c-decl.c (init_c_decl_processing_eachsrc): Don't
	reset_cpp_hashnodes.
	(init_c_decl_processing_once): Allow options to initialized more
	than once.

	* c-common.h (synthetic_exit_fragment): Add.

	* c-common.c (create_builtins_fragment): Allow options to
	initialized more than once.
	(gather_fragment_statistics): Always output fragment stats, for now.
	(reset_cpp_hashnodes): Allow options to initialized more than
	once.
	(synthetic_exit_fragment): Add.
	(create_output_fragment): Only create output fragments when in
	sever mode 2.
	(end_output_fragment): Likewise.
	(create_output_fragment): Set the name of the fragment.
	(create_cmdline_fragment): Add.
	(end_cmdline_fragment): Add.
	(init_cmdline_fragment): Add.
	(activate_cmdline_fragment): Add.

	* toplev.c (wrapup_global_declarations): Call
	DECL_NEWEST_DUPLICATE on decl.
	(wrapup_global_declarations): Don't infinitely loop if the decl
	has been written out already.
	(lang_dependent_init): Move pch_init from here.
	(init_compile_once): Allow options to initialized more than once.
	(server_loop): Free asm_file_name and input filenames.
	(server_loop): Allow options to initialized 

--- a/compile-server-branch/gcc/Makefile.in
+++ b/compile-server-branch/gcc/Makefile.in
@@ -3896,7 +3896,7 @@ TEST_TARGET = cpplib.o cpplex.o cppmacro.o cppexp.o cppfiles.o cpptrad.o   \
  alias.o bb-reorder.o builtins.o caller-save.o calls.o		  	   \
  cfg.o cfganal.o cfgbuild.o cfgcleanup.o cfglayout.o cfgloop.o		   \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
- cfgrtl.o combine.o conflict.o convert.o coverage.o cse.o cselib.o 	   \
+ cfgrtl.o combine.o conflict.o convert.o cse.o cselib.o 	   \
  dbxout.o debug.o df.o diagnostic.o dojump.o doloop.o dominance.o	   \
  dwarf2asm.o dwarf2out.o emit-rtl.o except.o explow.o			   \
  expmed.o expr.o final.o flow.o fold-const.o function.o gcse.o		   \
@@ -3912,14 +3912,24 @@ TEST_TARGET = cpplib.o cpplex.o cppmacro.o cppexp.o cppfiles.o cpptrad.o   \
  stor-layout.o stringpool.o timevar.o tracer.o tree.o tree-dump.o	   \
  unroll.o varasm.o varray.o version.o xcoffout.o			   \
  alloc-pool.o et-forest.o cfghooks.o bt-load.o pretty-print.o
-#bitmap.o insn-attrtab.o insn-extract.o insn-opinit.o insn-output.o insn-peep.o insn-recog.o rtl.o intl.o
-#vmsdbgout.o dwarfout.o
+# This one needs tighter lex syncing with fragment reuse
+# coverage.o
+# bitmap.o insn-attrtab.o insn-extract.o insn-opinit.o insn-output.o insn-peep.o insn-recog.o rtl.o intl.o
+# vmsdbgout.o dwarfout.o
+
+.PHONY: save-objs
+save-objs:
+	mkdir -p save-objs
+	mv $(TEST_TARGET) save-objs
+
+unsave-objs: test-clean
+	mv save-objs/* .
 
 test-clean: source.list
 	rm -f $(TEST_TARGET) ./cc1-server
 
 start-server:
-	stage2/cc1 -fserver $(BOOT_CFLAGS) -Werror $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES)  -isystem include -isystem stage2/include -quiet
+	stage2/cc1 -fserver
 
 source.list: Makefile
 	rm -f source.list
