PR c/11267         * c-decl.c (c_finalize): New.         (finish_function): Use it.  Genericize and finalize only non-nested         functions.  Register nested functions with cgraph.         * c-simplify.c: Include cgraph.h.         (c_genericize): Genericize nested functions.         * gimplify.c (gimplify_expr): Use DECL_SAVED_INSNS to access         the struct function for the context.         * Makefile.in (c-simplify.o): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76399 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1599,7 +1599,7 @@ tree-optimize.o : tree-optimize.c $(TREE_FLOW_H) $(CONFIG_H) \
 c-simplify.o : c-simplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h $(TREE_SIMPLE_H) varray.h flags.h \
    langhooks.h toplev.h rtl.h $(TREE_FLOW_H) langhooks-def.h \
-   $(TM_H) coretypes.h $(C_PRETTY_PRINT_H)
+   $(TM_H) coretypes.h $(C_PRETTY_PRINT_H) cgraph.h
 gimplify.o : gimplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
    diagnostic.h $(TREE_SIMPLE_H) tree-inline.h varray.h langhooks.h \
    langhooks-def.h $(TREE_FLOW_H) $(TIMEVAR_H) $(TM_H) coretypes.h except.h \
